# alcyone3

./: .gitignore  CMakeLists.txt  README.md  arch.cmake  config.h.in  misc.cmake
hardware/: CMakeLists.txt  serialdevice.cpp
log/: CMakeLists.txt
mlog/mlog/: mlog.hpp
mlog/mlog/impl/: logger.hpp
src/: CMakeLists.txt  alcyone.cpp  digitalinput.cpp  main.cpp  midi.cpp  pedal.cpp  webservice.cpp
src/include/: alcyone.h  digitalinput.h  midi.h  pedal.h  webservice.h
wiringPiStub/: CMakeLists.txt
www/: index.html  pedals.html  sysex.html
www/css/: alcyone.css
www/script/: jquery.l90r.piano.js
